UI 수정 완료 및 일반 로그인 연동(서버 에러 미해결)

--- a/easyqc3/app/src/main/res/values/strings.xml
+++ b/easyqc3/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="original">Original</string>
     <string name="undistorted">Undistorted</string>
 
+    <string name="googleLogin"><u>구글 연동 로그인</u></string>
+
 </resources>
