--- a/easyqc3/app/src/main/res/values/strings.xml
+++ b/easyqc3/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="undistortion">Undistortion</string>
     <string name="comparison">Comparison</string>
     <string name="preview_mode">Preview mode</string>
-    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
-    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
+    <string name="calibration_successful">Calibration 성공 했습니다..</string>
+    <string name="calibration_unsuccessful">Calibration 실패 했습니다.\n다시 진행해 주세요.</string>
     <string name="more_samples">Please, capture more samples</string>
     <string name="calibrating">Calibrating...</string>
     <string name="please_wait">Please, wait</string>
